--- a/render.yaml
+++ b/render.yaml
@@ -2,16 +2,8 @@ services:
   - type: web
     name: erp-api
     env: python
-    buildCommand: ""
+    buildCommand: pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
     envVars:
-      - key: DATABASE_URL
-        fromDatabase:
-          name: erp-db
-          property: connectionString
       - key: SECRET_KEY
         value: superkey123
-
-databases:
-  - name: erp-db
-    plan: free
